--- a/test.html
+++ b/test.html
@@ -1,11 +1,21 @@
-开始学编程  哈哈哈
 <!DOCTYPE html>
 <html>
 <head>
 	<title>我想测试网站链接网址</title>
 </head>
+<style type="text/css">
+	a{
+
+	}
+</style>
 <body>
-<a href="http:www.baidu.com">百度</a>
-<a href="https:www.google.com">谷歌</a>
+<div>网盘搜索  用于电子书和
+	 <a href="https://www.yunpanjingling.com">云盘精灵</a>
+     <a href="https://www.dalipan.com/">大力盘</a>
+</div>
+<div>学习网站
+	 <a href="http://oeasy.org/">oeasy</a>
+     <a href="https://www.dalipan.com/">大力盘</a>
+</div>
 </body>
 </html>
