--- a/test.html
+++ b/test.html
@@ -7,8 +7,15 @@
 	a{
 
 	}
+	body{
+       background-image: url(./images/2.jpg);
+       background-size: 1300px 700px;
+	}
 </style>
 <body>
+<audio autoplay="autoplay">
+  <source src="wav/1.mp3" type="audio/ogg"/>
+</audio>
 <div>网盘搜索  用于电子书和
 	 <a href="https://www.yunpanjingling.com">云盘精灵</a>
      <a href="https://www.dalipan.com/">大力盘</a>
@@ -17,5 +24,6 @@
 	 <a href="http://oeasy.org/">oeasy</a>
      <a href="https://www.dalipan.com/">大力盘</a>
 </div>
+
 </body>
 </html>
