--- a/test.html
+++ b/test.html
@@ -11,10 +11,11 @@
        background-image: url(./images/2.jpg);
        background-size: 1300px 700px;
 	}
+	
 </style>
 <body>
-<audio autoplay="autoplay">
-  <source src="wav/1.mp3" type="audio/ogg"/>
+<audio controls="controls" autoplay="autoplay">
+  <source src="wav/1.mp3" type="audio/mp3" />
 </audio>
 <div>网盘搜索  用于电子书和
 	 <a href="https://www.yunpanjingling.com">云盘精灵</a>
